remove guava dependency (#773)
* remove guava dependency

Signed-off-by: Jing Zhang <jngz@amazon.com>

* remove more unused dependencies

Signed-off-by: Jing Zhang <jngz@amazon.com>

---------

Signed-off-by: Jing Zhang <jngz@amazon.com>
Signed-off-by: Jeremy Dupras <jdupras@amazon.com>